<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_main_group">
        <item android:id="@+id/menu_item_ad_feed" android:title="@string/feed" />
    </group>
    <group android:id="@+id/menu_plant_management_group">
        <item
            android:id="@+id/menu_item_register_plant"
            android:title="@string/register_plant" />
        <item
            android:id="@+id/menu_item_my_plants"
            android:title="@string/minhas_plantas_title" />
        <item
            android:id="@+id/menu_item_requests"
            android:title="@string/requests" />
    </group>
    <group android:id="@+id/menu_last_group">
        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_item_logout"
            android:actionMenuTextColor="#F24C4C"
            android:icon="@drawable/logout"
            android:title="@string/exit" />
    </group>
</menu>